syntax = "proto3";

package order;

option java_package = "cn.edu.hit.proto.order";
option java_outer_classname = "OrderProto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message CreateOrderRequest {
    int32 user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    Order order = 1;
    bool success = 2;
    string message = 3;
}

message GetOrderRequest {
    string order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message Order {
    string id = 1;
    int32 user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    int64 created_time = 5;
    string status = 6;
}

message OrderItem {
    string product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double price = 4;
} 