syntax = "proto3";

package user;

option java_package = "cn.edu.hit.proto.user";
option java_outer_classname = "UserProto";

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message GetUserRequest {
    int32 user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

message CreateUserResponse {
    User user = 1;
    bool success = 2;
    string message = 3;
}

message ListUsersRequest {
    int32 page = 1;
    int32 size = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    int64 created_time = 5;
} 